--- a/randomized_contraction.ipynb
+++ b/randomized_contraction.ipynb
@@ -12,19 +12,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": [
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
     "# Randomized Contraction (N-2 iterations)\n",
@@ -38,61 +29,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# count number of edges\n",
-    "def number_edges(G):\n",
+    "G = {}\n",
+    "\n",
+    "with open('kargerMinCut.txt') as f:\n",
+    "    lines = f.readlines()\n",
+    "    for line in lines:\n",
+    "        tmp = np.fromstring(line, dtype=int, sep='\\n').tolist()\n",
+    "        G[ tmp[0] ] =  tmp[1:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# save edges and nodes to lists \n",
+    "def edges_nodes(G):\n",
     "    list_nodes_seen = []\n",
     "    edges = []\n",
-    "    for row in G:\n",
-    "        # for each row count edges and add them to total count of edges\n",
-    "        for i, e in enumerate(row):\n",
-    "            if i == 0:\n",
-    "                list_nodes_seen.append(e)\n",
-    "            else:\n",
-    "                if e not in list_nodes_seen:\n",
-    "                    edges.append((row[0], e))\n",
-    "    return edges"
+    "    for key, val in G.items():\n",
+    "        \n",
+    "        list_nodes_seen.append(key)\n",
+    "        \n",
+    "        # for each key append edges between two nodes\n",
+    "        for i, e in enumerate(val):\n",
+    "            if e not in list_nodes_seen:\n",
+    "                edges.append((key, e))\n",
+    "                \n",
+    "    return edges, list_nodes_seen"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# testing number_edges function\n",
-    "G = [np.array([1, 2, 4]), \n",
-    "     np.array([2, 1, 3, 4]),\n",
-    "     np.array([3, 2, 4]),\n",
-    "     np.array([4, 1, 2, 3])]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(1, 2), (1, 4), (2, 3), (2, 4), (3, 4)]"
-      ]
-     },
-     "execution_count": 86,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "number_edges(G)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,110 +89,102 @@
     "    N = len(G)\n",
     "    \n",
     "    # list of edges\n",
-    "    edges = number_edges(G)\n",
+    "    edges, all_nodes = edges_nodes(G)\n",
     "    \n",
-    "    while len(edges) > 1:\n",
-    "        \n",
+    "    # while there are more than 2 nodes remaining\n",
+    "    while len(all_nodes) > 2:\n",
+    "              \n",
     "        # randomly pick one edge\n",
     "        i = np.random.randint(len(edges), dtype='int')\n",
     "        \n",
     "        # contract that edge and return new G without that edge\n",
+    "        d = edges.pop(i)\n",
     "        \n",
-    "        new_edge_list = edges.pop(i)\n",
-    "        print(new_edge_list)\n",
+    "        # modify edges and all_nodes to have a supernode        \n",
+    "        newG = {}\n",
+    "    \n",
+    "        # merge two rows of G into one contracted array    \n",
+    "        contracted_array = []\n",
+    "        contracted_array.append((d[0], d[1]))\n",
     "        \n",
-    "        # return the cut represented by last two remaining vertices\n",
+    "        for a in G[d[0]]: \n",
+    "            if a not in d:\n",
+    "                contracted_array.append(a)\n",
+    "        for b in G[d[1]]:\n",
+    "            if b not in d:\n",
+    "                contracted_array.append(b)\n",
+    "      \n",
+    "        for key, val in G.items():\n",
+    "            if key == d[0]:\n",
+    "                newG[key] = contracted_array\n",
+    "            elif key == d[1]:\n",
+    "                continue\n",
+    "                \n",
+    "            else: # for the rest of keys not d[0] or d[1]\n",
+    "                \n",
+    "                if (d[0] in val) or (d[1] in val):\n",
+    "                    \n",
+    "                    tmp = []\n",
+    "                    for aa in val:\n",
+    "                        if aa == d[0] or aa == d[1]:\n",
+    "                            tmp.append(d)\n",
+    "                        else:\n",
+    "                            tmp.append(aa)\n",
+    "                    newG[key] = tmp\n",
+    "                    \n",
+    "                else:\n",
+    "                    newG[key] = val                \n",
+    "       \n",
+    "        # relabel nodes such that there are no tuples\n",
+    "        for key, val in newG.items():\n",
+    "            for ii, aa in enumerate(val): \n",
+    "                # convert tuple supernode into int label\n",
+    "                if type(aa) == tuple:\n",
+    "                    newG[key][ii] = d[0]\n",
+    "                                        \n",
     "        \n",
+    "        edges, all_nodes = edges_nodes(newG)\n",
     "        \n",
+    "        # delete self loops\n",
+    "        for key, val in newG.items():\n",
+    "            for ii, aa in enumerate(val): \n",
+    "                if key == aa:\n",
+    "                    val.pop(ii)\n",
+    "\n",
+    "        G = newG\n",
+    "        \n",
+    "    # return the min cut represented by last two remaining vertices\n",
+    "    return len(edges)\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(2, 4)\n",
-      "(1, 2)\n",
-      "(3, 4)\n",
-      "(1, 4)\n"
+      "min cut:  17\n",
+      "CPU times: user 10min 48s, sys: 12.4 s, total: 11min 1s\n",
+      "Wall time: 11min 17s\n"
      ]
     }
    ],
    "source": [
-    "np.random.seed(seed=42)\n",
+    "%%time\n",
+    "# loop over random seeds, output the mincut from a lot of random runs\n",
+    "mincut = np.inf\n",
+    "for i in range(1000):\n",
+    "    np.random.seed(seed=i)\n",
+    "    tmp = randomized_contraction(G)\n",
+    "    if tmp < mincut:\n",
+    "        mincut = tmp\n",
     "\n",
-    "randomized_contraction(G)"
+    "print('min cut: ', mincut)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "G = []\n",
-    "\n",
-    "with open('kargerMinCut.txt') as f:\n",
-    "    lines = f.readlines()\n",
-    "    for line in lines:\n",
-    "        myarray = np.fromstring(line, dtype=int, sep='\\n')\n",
-    "        G.append(myarray) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "200"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(G)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[array([  1,  37,  79, 164, 155,  32,  87,  39, 113,  15,  18,  78, 175,\n",
-       "        140, 200,   4, 160,  97, 191, 100,  91,  20,  69, 198, 196]),\n",
-       " array([  2, 123, 134,  10, 141,  13,  12,  43,  47,   3, 177, 101, 179,\n",
-       "         77, 182, 117, 116,  36, 103,  51, 154, 162, 128,  30])]"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "G[0:2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -224,7 +203,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.6"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
